temporary help and about page

--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -117,7 +117,7 @@
                         ·
                         <a href="#">Ayuda</a>
                         ·
-                        <a href="#">Acerca</a>
+                        <a href="{% url 'games:about' %}">Acerca</a>
                         ·
                         <a href="{% url 'games:contact' %}">Contacto</a>
                     </p>
