Fix missing settings file for Heroku

--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -115,7 +115,7 @@
                     <p class="footer-links">
                         <a href="{% url 'games:index' %}">Inicio</a>
                         ·
-                        <a href="#">Ayuda</a>
+                        <a href="{% url 'games:help' %}">Ayuda</a>
                         ·
                         <a href="{% url 'games:about' %}">Acerca</a>
                         ·
