--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                   </button>
                   <a class="navbar-brand" href="{% url 'games:index' %}">
-                      <i class="fa fa-gamepad" aria-hidden="true"></i> Game Ranks
+                      <img src="{% static 'games/img/logo.png' %}">
                   </a>
                 </div>
 
@@ -105,8 +105,8 @@
             <div class="footer-distributed">
                 <div class="footer-right">
 
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/GameRanks-1313368898783374/"><i class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/GameRanks"><i class="fa fa-twitter"></i></a>
 
                 </div>
 
