--- a/games/templates/games/help.html
+++ b/games/templates/games/help.html
@@ -4,5 +4,6 @@
 {% block body %}
     <div class="col-md-6 col-md-offset-3">
         <img style="width: 50%; height: 50%;" class="center-block img-responsive" src="{% static 'games/img/down.png' %}">
+        <h2 style="text-align: center; color: #052c23;">Proximamente</h2>
     </div>
 {% endblock %}
