--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -104,10 +104,9 @@
 
             <div class="footer-distributed">
                 <div class="footer-right">
-
                     <a href="https://www.facebook.com/GameRanks-1313368898783374/"><i class="fa fa-facebook"></i></a>
                     <a href="https://twitter.com/GameRanks"><i class="fa fa-twitter"></i></a>
-
+                    <p style="color: #696873; font-size: 8px; padding-top: 3%">Powered by: igdb.com</p>
                 </div>
 
                 <div class="footer-left">
@@ -115,10 +114,12 @@
                     <p class="footer-links">
                         <a href="{% url 'games:index' %}">Inicio</a>
                         ·
+                        <!--
                         <a href="{% url 'games:help' %}">Ayuda</a>
                         ·
                         <a href="{% url 'games:about' %}">Acerca</a>
                         ·
+                        -->
                         <a href="{% url 'games:contact' %}">Contacto</a>
                     </p>
 
