--- a/games/templates/games/game.html
+++ b/games/templates/games/game.html
@@ -3,49 +3,69 @@
 
 {% block body %}
 {% load staticfiles %}
-<div>
-    <div class="col-md-6 col-md-offset-3">
-        <div class="jumbotron" style="text-align: center">
-            <h2 style="text-align: center"></h2>
-            {% if game.cover == "None" %}
-                <img class="game_art img-responsive img-rounded" src="{% static 'games/img/temp_cover.png' %}">
-            {% else %}
-                <img class="game_art img-responsive img-rounded" src="{{ game.cover }}">
-            {% endif %}
-            <p><b>Lanzamiento: </b>{{ game.year }}</p>
-            {% if game.console.name == "Xbox One" or game.console.name == "Xbox 360" %}
-                <p><b>Consola: </b>{{ game.console }} <i class="ionicons ion-xbox"></i></p>
-            {% else %}
-                <p><b>Consola: </b>{{ game.console }} <i class="ionicons ion-playstation"></i></p>
-            {% endif %}
+<div class="container">
+    <div class="jumbotron col-md-12">
+        {% if game.cover == None %}
+            <div class="col-md-6">
+                 <img class="game_art" style="max-height: 50%;" src="{% static 'games/img/noimage.jpg' %}">
+            </div>
+        {% else %}
+            <div class="col-md-6">
+                <img class="game_art" src="http://{{ game.cover }}">
+            </div>
+        {% endif %}
+        <div class="col-md-6">
+            <h2 style="text-align: center">{{ game.name }}</h2>
+            <h5 style="text-align: center;">Lanzamiento: {{ game.release }}</h5>
+            <h5>Consolas</h5>
+            <ul class="list-group">
+                {% for console in game.platforms_as_list %}
+                    <li class="list-group-item"><i style="float: left; padding-right: 5%;" class="ionicons ion-ios-game-controller-b-outline"></i>{{ console }}</li>
+                {% endfor %}
+            </ul>
 
-            <p>
-                {% csrf_token %}
-                {% if user.is_authenticated %}
-                    <a href="{% url 'games:vote' game.id user.id %}"><i class="fa fa-thumbs-o-up"
-                                                                        aria-hidden="true"></i></a> : {{ game.votes }}
-                {% else %}
-                    <a href="{% url "games:register" %}"><i
-                            class="fa fa-thumbs-o-up" aria-hidden="true"></i></a> : {{ game.votes }}
-                {% endif %}
-            </p>
+            {% if game.screenshots != None %}
+            <div  id="myCarousel" class="carousel slide" data-ride="carousel">
 
-            {% if messages %}
-                {% for message in messages %}
-                    {% if message.tags == "error" %}
-                        <div class="container">
-                            <div class="col-md-6 col-md-offset-3  alert alert-danger">
-                                <strong>Error!</strong> {{ message }}
-                            </div>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                {% for screen in game.screenshots_as_list %}
+                    {% if forloop.first %}
+                        <div class="item active">
+                            <img src="https://{{ screen }}" >
                         </div>
-                    {% elif message.tags == "success" %}
-                        <div class="container">
-                            <div class=" col-md-6 col-md-offset-3 alert alert-success">
-                                <strong>Exito!</strong> {{ message }}
-                            </div>
+                    {% else %}
+                        <div class="item">
+                            <img src="https://{{ screen }}" >
                         </div>
                     {% endif %}
                 {% endfor %}
+                </div>
+
+                 <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <div><br></div>
+            {% endif %}
+
+            {% if game.rating != None %}
+            <div class="progress">
+                {% if game.rating < 70 %}
+                    <div class="progress-bar progress-bar-warning" role="progressbar" style="width: {{ game.rating }}%;" aria-valuenow="{{ game.rating }}" aria-valuemin="0" aria-valuemax="100">{{ game.rating|floatformat }}%</div>
+                {% elif game.rating < 50 %}
+                    <div class="progress-bar progress-bar-danger" role="progressbar" style="width: {{ game.rating }}%;" aria-valuenow="{{ game.rating }}" aria-valuemin="0" aria-valuemax="100">{{ game.rating|floatformat }}%</div>
+                {% else %}
+                    <div class="progress-bar progress-bar-success" role="progressbar" style="width: {{ game.rating }}%;" aria-valuenow="{{ game.rating }}" aria-valuemin="0" aria-valuemax="100">{{ game.rating|floatformat }}%</div>
+                {% endif %}
+            </div>
+            <h6 style="text-align: center">(Puntaje de los criticos)</h6>
             {% endif %}
         </div>
     </div>
